# DeepSearcher

./: .gitignore  README.md  README.zh.md  local_config.json.example  pyproject.toml  requirements.txt
deepsearcher/: __init__.py  __main__.py  agent.py  cli.py  config.py  llm.py  llm_adapter.py  models.py  server.py
deepsearcher/evaluator/: __init__.py  metrics.py  reporter.py  storage.py
deepsearcher/tools/: evaluate.py  planner.py  read.py  rewrite.py  search.py
deepsearcher/utils/: text_tools.py  token_tracker.py  url_tools.py
vue/: index.html  package-lock.json  package.json  tailwind.config.js
vue/src/: App.vue  style.css
vue/src/api/: search.js
vue/src/router/: index.js
vue/src/views/: EvalView.vue  HistoryView.vue  InputView.vue  ProcessView.vue  ResultView.vue  RunningView.vue
