[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepsearcher"
version = "0.1.0"
description = "A multi-turn research agent that digs deeper into complex questions"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Chen Yan", email = "626399071@qq.com"},
]
keywords = ["deep-research", "agent", "ai-search", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "ddgs",
    "trafilatura>=2.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "langgraph>=0.2.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "sse-starlette>=1.6.0",
]

[project.scripts]
deepsearcher = "deepsearcher.cli:main"

[project.urls]
Homepage = "https://github.com/cy9871/DeepSearcher"
Repository = "https://github.com/cy9871/DeepSearcher.git"
Issues = "https://github.com/cy9871/DeepSearcher/issues"

[tool.hatch.build.targets.wheel]
packages = ["deepsearcher"]
